--- a/GLFW/Bounce.vcxproj.filters
+++ b/GLFW/Bounce.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="AudioManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="igraphics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -76,6 +73,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="text.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="External\Glad\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
